--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         </section>
       </header>
       <main>
-        <section class="features">
-          <a id="features"></a>
+        <section class="features" id="features">
           <div class="container">
             <div class="features-container">
               <ul class="features__tabs">
@@ -105,8 +104,7 @@
             </div>
           </div>
         </section>
-        <section class="awesome">
-          <a id="about"></a>
+        <section class="awesome" id="about">
           <div class="container">
             <h2 class="awesome__title title">Why this is awesome</h2>
             <h3 class="awesome__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
@@ -144,8 +142,7 @@
             </div>
           </div>
         </section>
-        <section class="pricing">
-          <a id="pricing"></a>
+        <section class="pricing" id="pricing">
           <div class="container">
             <h2 class="pricing__title title">Pricing options</h2>
             <h3 class="pricing__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -192,8 +189,7 @@
             </div>
           </div>
         </section>
-        <section class="customers">
-          <a id="reviews"></a>
+        <section class="customers" id="reviews">
           <div class="container">
             <h2 class="customers__title title">what our customers are saying</h2>
             <h3 class="customers__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
@@ -251,8 +247,7 @@
             </div>
           </div>
         </section>
-        <section class="contact">
-          <a id="contact"></a>
+        <section class="contact" id="contact">
           <div class="container">
             <h2 class="contact__title title">Contact us</h2>
             <h3 class="contact__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
